--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ authors = ["Aaron Moore"]
 statusline = 'statusline.__main__:main'
 
 [tool.poetry.dependencies]
-python = "~3"
+python = "~3.6"
 ansi = "^0.1"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
