--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ authors = ["Aaron Moore"]
 statusline = 'statusline.__main__:main'
 
 [tool.poetry.dependencies]
-python = "~3.6"
+python = ">=3.6,<4"
 ansi = "^0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
+pylint = "^2.7.2"
+pylint-pytest = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
