--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ansi = "^0.1"
 pytest = "^6.2.2"
 pylint = "^2.7.2"
 pylint-pytest = "^0.3.0"
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
