--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ansi = "^0.1"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 pylint = "^2.7.2"
+pylint-quotes = "^0.2.1"
 pylint-pytest = "^0.3.0"
 mypy = "^0.812"
 
