--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,24 +2,21 @@ name: CI
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - master
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.x
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
     - name: Python Poetry Action
       # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v2.1.0
