--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,8 +20,20 @@ jobs:
     - name: Python Poetry Action
       # https://github.com/marketplace/actions/python-poetry-action
       uses: abatilo/actions-poetry@v2.1.0
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v2
+      id: cache
+      with:
+        path: |
+          ~/.config/pypoetry
+          ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
     - name: Install dependencies
-      run: poetry install
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: |
+        poetry config virtualenvs.in-project false
+        poetry config virtualenvs.path ~/.virtualenvs
+        poetry install
     - name: Lint with pylint and mypy
       run: make lint
     - name: Test with pytest
