--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,16 @@ authors = ["Aaron Moore"]
 statusline = 'statusline.__main__:main'
 
 [tool.poetry.dependencies]
-python = ">=3.6,<4"
+python = "^3.11"
 ansi = "^0.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.2"
-pytest-cov = "^2.11.1"
-pylint = "^2.7.2"
-pylint-quotes = "^0.2.1"
-pylint-pytest = "^0.3.0"
-mypy = "^0.812"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pylint = "^2.17.5"
+pylint-quotes = "^0.2.3"
+pylint-pytest = "^1.1.2"
+mypy = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
